2008-07-06 [paul]	0.19.0cvs1

	* libgtkhtml/css/cssparser.h
		fix compilation on FreeBSD 4.8-RELEASE
		Thanks to Michael Hughes

2008-06-27 [paul]	0.19.0

	0.19 released

2008-06-27 [paul]	0.18.0cvs6

	* po/es.po
	* po/fi.po
		updated by Ricardo Mones and Flammie Pirinen

2008-05-12 [wwp]	0.18.0cvs5

	* src/gtkhtml2_prefs.c
		Fix storing of translated string "Any" in plugins prefs
		(whitelisting).

2008-05-02 [paul]	0.18.0cvs4

	* po/pl.po
		complete last commit

2008-05-02 [paul]	0.18.0cvs3

	* po/pl.po
		fix bug 1592 'Wrong translation'

2008-04-29 [colin]	0.18.0cvs2

	* libgtkhtml/dom/html/Makefile.in ** REMOVE **
		This shouldn't be in CVS

2008-04-18 [colin]	0.18.0cvs1

	* src/gtkhtml2_viewer.c
		Use claws_unlink instead of g_unlink

2008-04-18 [paul]	0.18.0

	0.18.0 released

	* po/fi.po
	* po/fr.po
	* po/it.po
		updated by Flammie Pirinen, wwp and Andrea Spadaccini

2008-03-21 [colin]	0.17.2cvs1

	* configure.ac
		Bump version following stable release 3.3.1 :)

2008-03-15 [colin]	0.17.1cvs6

	* src/gtkhtml2_viewer.c
		Fix bug 1182, 'charset in incomplete html messages'
		Figure out better if/where to inject the charset in
		headers.

2008-03-12 [colin]	0.17.1cvs5

	* libgtkhtml/layout/htmlboxtext.c
		Fix warning

2008-02-28 [colin]	0.17.1cvs4

	* libgtkhtml/document/htmlparser.c
		Remove raw printf

2008-02-20 [paul]	0.17.1cvs3

	* src/gtkhtml2_viewer.c
		hide noticeview when clearing viewer

2008-02-11 [colin]	0.17.1cvs2

	* libgtkhtml/Makefile.am
	* libgtkhtml/css/Makefile.am
	* libgtkhtml/document/Makefile.am
	* libgtkhtml/dom/Makefile.am
	* libgtkhtml/dom/core/Makefile.am
	* libgtkhtml/dom/events/Makefile.am
	* libgtkhtml/dom/html/Makefile.am
	* libgtkhtml/dom/html/Makefile.in
	* libgtkhtml/dom/traversal/Makefile.am
	* libgtkhtml/dom/views/Makefile.am
	* libgtkhtml/graphics/Makefile.am
	* libgtkhtml/layout/Makefile.am
	* libgtkhtml/layout/html/Makefile.am
	* libgtkhtml/util/Makefile.am
	* libgtkhtml/view/Makefile.am
		And don't install includes
